Arrumado testes e trabalho em forma de evento para separar as responsabilidades